2014-01-23  Niibe Yutaka  <gniibe@fsij.org>

	* src/jpc.c (jpc_add_ac_signed): Fix for constant time.

	* src/ec_p256.c (ecdsa): Bug fix for k selection.

2014-01-22  Niibe Yutaka  <gniibe@fsij.org>

	* src/modp256.c (modp256_inv): Fix for constant time.

	* src/bn.c (bn256_sqr): Fix for constant time.

	* src/mod.c (mod_inv): Fix for constant time.

	* src/ec_p256.c (compute_kG): Simplify.

	* src/jpc.c (jpc_double): Support calling with A = infinity.

2014-01-21  Niibe Yutaka  <gniibe@fsij.org>

	* src/jpc.c (jpc_add_ac_signed): Bug fix for A check.

	* src/ec_p256.c (ecdsa): Fix for constant time.

	* src/modp256.c (modp256_add, modp256_sub, modp256_reduce)
	(modp256_shift): Fix for constant time.
	(modp256_inv): Likewise (not fully constant time, yet).

	* src/mod.c (mod_reduce): Fix for constant time.
	(mod_inv): Likewise (not fully constant time, yet).

	* src/bn.h (bn256, bn512): words -> word.
	* src/ec_p256.h (naf4_257): Likewise.

2014-01-20  Niibe Yutaka  <gniibe@fsij.org>

	* src/fe25519.h, src/fe25519.c: New.

2014-01-15  Niibe Yutaka  <gniibe@fsij.org>

	* src/bn.c (bn256_is_zero, bn256_is_ge, bn256_cmp): Computation
	should be constant time.

2013-12-25  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: 1.1.1.

	* tool/gnuk_token.py (gnuk_token.__init__, regnual.__init__): Fix
	the argument of setAltInterface.
	* tool/gnuk_upgrade.py: Likewise.
	* tool/dfuse.py (DFU_STM32.__init__): Likewise.
	* tool/stlinkv2.py (stlinkv2.__init__): Likewise.

2013-12-24  Niibe Yutaka  <gniibe@fsij.org>

	* polarssl/include/polarssl/bn_mul.h (MULADDC_1024_CORE)
	(MULADDC_1024_LOOP): Use younger number registers more for shorter
	instructions and better performance.
	* polarssl/library/bignum.c (mpi_montsqr): Likewise.  Change loop
	structure and conditional branch for better performance.

2013-12-23  Niibe Yutaka  <gniibe@fsij.org>

	* polarssl/library/bignum.c (mpi_montmul): Computation
	time should not depends on input.